--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -227,7 +227,7 @@
      <rect>
       <x>80</x>
       <y>180</y>
-      <width>231</width>
+      <width>61</width>
       <height>25</height>
      </rect>
     </property>
@@ -250,7 +250,7 @@
      <rect>
       <x>80</x>
       <y>250</y>
-      <width>231</width>
+      <width>61</width>
       <height>25</height>
      </rect>
     </property>
@@ -271,8 +271,8 @@
    <widget class="QPushButton" name="add_event">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>170</y>
+      <x>80</x>
+      <y>310</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -284,8 +284,8 @@
    <widget class="QPushButton" name="add_passenger">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>240</y>
+      <x>230</x>
+      <y>310</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -404,6 +404,52 @@
     </property>
     <property name="text">
      <string>Simulation Set Up</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>130</y>
+      <width>151</width>
+      <height>221</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser_2">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>130</y>
+      <width>151</width>
+      <height>221</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>110</y>
+      <width>141</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Passengers Added:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>110</y>
+      <width>141</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Events Added: </string>
     </property>
    </widget>
   </widget>
