--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -406,34 +406,19 @@
      <string>Simulation Set Up</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="textBrowser">
-    <property name="geometry">
-     <rect>
-      <x>400</x>
-      <y>130</y>
-      <width>151</width>
-      <height>221</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textBrowser_2">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>130</y>
-      <width>151</width>
-      <height>221</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>370</x>
       <y>110</y>
       <width>141</width>
       <height>17</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <underline>true</underline>
+     </font>
     </property>
     <property name="text">
      <string>Passengers Added:</string>
@@ -442,14 +427,54 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>640</x>
       <y>110</y>
       <width>141</width>
       <height>17</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <underline>true</underline>
+     </font>
+    </property>
     <property name="text">
      <string>Events Added: </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="passenger_display">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>130</y>
+      <width>261</width>
+      <height>221</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="event_display">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>130</y>
+      <width>151</width>
+      <height>221</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
    </widget>
   </widget>
