--- a/addeventdialog.ui
+++ b/addeventdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>313</width>
+    <width>347</width>
     <height>300</height>
    </rect>
   </property>
@@ -29,24 +29,24 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QComboBox" name="comboBox">
+  <widget class="QComboBox" name="safety_event">
    <property name="geometry">
     <rect>
      <x>50</x>
      <y>50</y>
-     <width>171</width>
+     <width>231</width>
      <height>25</height>
     </rect>
    </property>
    <property name="currentText">
-    <string>Door Obstruction</string>
+    <string/>
    </property>
    <property name="placeholderText">
     <string>Select Event</string>
    </property>
    <item>
     <property name="text">
-     <string>Door Obstruction</string>
+     <string>Fire Alarm (from elevator)</string>
     </property>
    </item>
    <item>
@@ -56,7 +56,7 @@
    </item>
    <item>
     <property name="text">
-     <string>Fire Alarm (from elevator)</string>
+     <string>Door Obstruction</string>
     </property>
    </item>
    <item>
@@ -83,35 +83,35 @@
     <string>Safety Event</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="elevator_id">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>120</y>
-     <width>171</width>
+     <y>170</y>
+     <width>91</width>
      <height>25</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="elevator_id_label">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>100</y>
+     <y>150</y>
      <width>331</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Event Source (elevator #):</string>
+    <string>Elevator ID:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="timestep">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>190</y>
-     <width>171</width>
+     <y>110</y>
+     <width>91</width>
      <height>25</height>
     </rect>
    </property>
@@ -120,7 +120,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>170</y>
+     <y>90</y>
      <width>181</width>
      <height>17</height>
     </rect>
