--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -427,7 +427,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>600</x>
       <y>110</y>
       <width>141</width>
       <height>17</height>
@@ -447,7 +447,7 @@
      <rect>
       <x>370</x>
       <y>130</y>
-      <width>261</width>
+      <width>221</width>
       <height>221</height>
      </rect>
     </property>
@@ -464,9 +464,9 @@
    <widget class="QLabel" name="event_display">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>600</x>
       <y>130</y>
-      <width>151</width>
+      <width>191</width>
       <height>221</height>
      </rect>
     </property>
@@ -475,6 +475,9 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
