--- a/addpassengerdialog.ui
+++ b/addpassengerdialog.ui
@@ -80,7 +80,7 @@
     <rect>
      <x>30</x>
      <y>160</y>
-     <width>81</width>
+     <width>181</width>
      <height>25</height>
     </rect>
    </property>
@@ -112,8 +112,8 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>210</y>
-     <width>121</width>
+     <y>260</y>
+     <width>181</width>
      <height>25</height>
     </rect>
    </property>
@@ -155,7 +155,7 @@
     </palette>
    </property>
    <property name="text">
-    <string>Add Behaviour</string>
+    <string>Add Additional Behaviour</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -188,6 +188,29 @@
    </property>
    <property name="wordWrap">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="destination">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>220</y>
+     <width>181</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>200</y>
+     <width>141</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Destination Floor:</string>
    </property>
   </widget>
  </widget>
