--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -83,7 +83,7 @@
      <rect>
       <x>-10</x>
       <y>0</y>
-      <width>931</width>
+      <width>951</width>
       <height>561</height>
      </rect>
     </property>
@@ -206,7 +206,7 @@
      <widget class="QLCDNumber" name="timestep">
       <property name="geometry">
        <rect>
-        <x>710</x>
+        <x>670</x>
         <y>70</y>
         <width>131</width>
         <height>51</height>
@@ -373,7 +373,7 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>710</x>
+        <x>670</x>
         <y>50</y>
         <width>121</width>
         <height>17</height>
@@ -424,7 +424,7 @@
        <rect>
         <x>20</x>
         <y>240</y>
-        <width>901</width>
+        <width>921</width>
         <height>311</height>
        </rect>
       </property>
@@ -521,15 +521,16 @@
       </property>
       <property name="font">
        <font>
-        <family>DejaVu Sans Mono</family>
+        <family>Monospace</family>
+        <pointsize>11</pointsize>
        </font>
       </property>
       <property name="html">
        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'DejaVu Sans Mono'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Monospace'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans'; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_2">
@@ -548,9 +549,9 @@ p, li { white-space: pre-wrap; }
      <widget class="QTextBrowser" name="active_safety_events">
       <property name="geometry">
        <rect>
-        <x>710</x>
+        <x>670</x>
         <y>150</y>
-        <width>201</width>
+        <width>271</width>
         <height>81</height>
        </rect>
       </property>
@@ -591,6 +592,11 @@ p, li { white-space: pre-wrap; }
         </disabled>
        </palette>
       </property>
+      <property name="font">
+       <font>
+        <family>DejaVu Sans Mono</family>
+       </font>
+      </property>
       <property name="frameShape">
        <enum>QFrame::Panel</enum>
       </property>
@@ -598,7 +604,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>710</x>
+        <x>670</x>
         <y>130</y>
         <width>171</width>
         <height>17</height>
